# calisto-ai

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  RELEASE.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements-ci.txt  requirements-dev.txt  requirements.txt  test.db
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: __init__.py  config.py  main.py
backend/app/core/: config.py  dependencies.py  logging.py  metrics.py  rate_limit.py  security.py
backend/app/db/: seed.py  session.py
backend/app/models/: __init__.py  audit_log.py  base.py  chat.py  chunk.py  (+9 more)
backend/scripts/: init_db.py  seed_demo_corpus.py  smoke_check.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_chat.py  test_documents.py  test_services_extended.py  test_utils_coverage.py
data/samples/: employee_handbook.txt  engineering_runbook.txt  eval_set.json  security_policy.txt
docs/: API.md  ARCHITECTURE.md  CODEBASE_AUDIT_PLAN.md  DEMO_RUNBOOK.md  DEPLOYMENT.md  EVALUATION.md  PORTS.md  RESUME_BULLETS.md  STYLEGUIDE.md  TROUBLESHOOTING.md  change-log.md  chunking-strategy.md  resume-bullets.md
docs/preview/: index.html
docs/screenshots/: README.md
frontend/: .eslintrc.cjs  Dockerfile  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  main.jsx
scripts/: evaluate_retrieval.py  quickstart.sh  smoke_test.py
(+48 files in other folders)
